--- a/index.html
+++ b/index.html
@@ -3,21 +3,35 @@
     <head>
         <meta charset="UTF-8" />
         <title>Student Bio</title>
+        <link rel="stylesheet" type="text/css" href="./css/style.css" />
     </head>
-    <body>
-        <h1>Student Bio</h1>
-        <h2>Shannon Nell</h2>
-        <img src="./Images/profileimage.jpg" alt="profile image" 
-            width="200px"/>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur consequatur vel illum aliquid. Qui tempore harum incidunt, iure nostrum commodi vero repellendus repellat totam veniam perspiciatis illo, in aspernatur dolore!
-        </p>
 
-        <h2>Contact Info</h2>
-        <ul>
-            <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a> </li>
-            <li><strong>Github:</strong> <a href="#">Shannon Nell</a> </li>
-            <li><strong>Portfolio:</strong> <a href="#"> coming soon</a></li>
-        </ul>
+    <body>
+        <!-- Site Header -->
+        <header>
+            <h1>Shannon Nell</h1>
+        </header>
+
+        <main>
+        <!-- Section 1: Bio -->
+            <section>
+                <h2>Portfolio</h2>
+                <img src="./Images/profileimage.jpg" alt="Shannon Nell" 
+                    width="200px"/>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur consequatur vel illum aliquid. Qui tempore harum incidunt, iure nostrum commodi vero repellendus repellat totam veniam perspiciatis illo, in aspernatur dolore!
+                </p>
+            </section>
+        <!-- Section 2: Contact Info -->
+            <section>
+                <h2>Contact Info</h2>
+                <br />
+                <ul>
+                    <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a> </li>
+                    <li><strong>Github:</strong> <a href="#">Shannon Nell</a> </li>
+                    <li><strong>Portfolio:</strong> <a href="#"> coming soon</a></li>
+                </ul>
+            </section>
+        </main>
     </body>
 </html>
