portfolio class css updated

--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
             <h1>Shannon Nell</h1>
         </header>
 
-        <main>
         <!-- Section 1: Bio -->
-            <section>
+        <div class="container">
+            <section id="main-bio">
                 <h2>Portfolio</h2>
-                <img src="./Images/profileimage.jpg" alt="Shannon Nell" 
+                <img 
+                    id="bio-image"
+                    src="./Images/350-200x200.jpeg" 
+                    alt="Shannon Nell" 
                     width="200px"/>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur consequatur vel illum aliquid. Qui tempore harum incidunt, iure nostrum commodi vero repellendus repellat totam veniam perspiciatis illo, in aspernatur dolore!
                 </p>
             </section>
         <!-- Section 2: Contact Info -->
-            <section>
+            <section id="contact-info">
                 <h2>Contact Info</h2>
                 <br />
                 <ul>
@@ -32,6 +35,6 @@
                     <li><strong>Portfolio:</strong> <a href="#"> coming soon</a></li>
                 </ul>
             </section>
-        </main>
+        </div>
     </body>
 </html>
